# amortized_vi_trpl

./: README.md  environment.yml  main.py  main_gmm.py  main_gmm_c.py  main_vae.py
GMM/: GMM_model.py  GMM_model2.py  GMM_plot.py  GMM_simple_plot.py  GMM_simple_target.py  GMM_single_sweep.py  GMM_target.py  test.py
GMM/wandb/: latest-run
Gaussian/: Gaussian_model.py  Gaussian_plot.py  Gaussian_sweep.py  Gaussian_targets.py  full_graph  kl_projection.py  model.py  split_kl_projection.py  twodim_targets.py  utils.py
Gaussian/wandb/: latest-run
conf/: config.yaml  config_bmm.yaml  config_funnel.yaml  config_gmm.yaml
conf/model/: gmm_target.yaml
conf/schema/: no_projection.yaml  p10.yaml  p20.yaml  p30.yaml  p40.yaml  p5.yaml  p50.yaml  projection.yaml  projection_10d_funnel.yaml  projection_4gmm.yaml
conf/seed/: a.yaml  b.yaml  c.yaml  d.yaml  e.yaml  h.yaml  i.yaml  j.yaml  k.yaml  seed_a.yaml  seed_b.yaml  seed_c.yaml
cpp_projection/: CMakeLists.txt
cpp_projection/include/: PyArmaConverter.h
cpp_projection/include/projection/: BatchedCovOnlyProjection.h  BatchedSplitDiagMoreProjection.h  CovOnlyMoreProjection.h  MoreProjection.h  SplitDiagMoreProjection.h
cpp_projection/src/projection/: BatchedCovOnlyProjection.cpp  BatchedProjection.cpp  BatchedSplitDiagMoreProjection.cpp  DiagCovOnlyMoreProjection.cpp  MoreProjection.cpp  SplitDiagMoreProjection.cpp
daft/configs/: config_star.yaml
daft/daft_conf/: config_gmm.yaml  config_star.yaml
scripts/: main_gmm.py  main_gmm_c.py  main_star.py  main_star_stl.py  main_star_vanilla.py  main_vae.py
targets/: base_target.py
(+1798 files in other folders)
